# TalkTo_APP_AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
app/: __init__.py  main.py
app/api/: dependencies.py
app/core/: __init__.py  config.py  errors.py  logging.py  security.py
app/prompts/: __init__.py
app/providers/: __init__.py  llm.py
app/schemas/: __init__.py  analysis.py  common.py  context.py  embeddings.py  memory.py  persona.py  recording.py  reflection.py  transcript.py  voice.py
app/services/: __init__.py  correction.py  glossary.py  transcription.py
app/workers/: __init__.py  recording_analysis.py
docs/: architecture.md  intake_review_ver1.md
docs/ai_backend_integration/: ai_backend_integration_ver1.md  ai_backend_integration_ver2.md  ai_backend_integration_ver3.md  ai_backend_integration_ver4.md  ai_backend_integration_ver5.md  ai_backend_integration_ver6.md  ai_backend_integration_ver7.md  clone_automation_checklist.md
docs/deploy/: deploy.md
evaluation/: EXTERNAL_CASES.md  README.md  analysis_lab.py  common.py  correction_lab.py  e2e_external.py  external_lab.py  inspect_stages.py  metrics.py  speaker_id_lab.py
evaluation/analysis/: lab.py
evaluation/bakeoff/: run_bakeoff.py
evaluation/correction/: lab.py
evaluation/e2e/: run_e2e_transcription.py
evaluation/embeddings/: lab.py  queries.py
evaluation/enrichment/: lab.py
evaluation/memory_segments/: coverage.py  faithfulness.py  lab.py
evaluation/persona/: build.py  build_from_recordings.py  chat.py  clone_personas.py  external_lab.py  gen_app_input_docx.py  (+9 more)
tests/: __init__.py
(+95 files in other folders)
