[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "talkto-app-ai"
version = "0.1.0"
description = "Integrated AI service and worker foundation for the TalkTo app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "openai>=1.0,<3.0",
  "pydantic>=2.8,<3.0",
  "python-dotenv>=1.0,<2.0",
  "python-multipart>=0.0.9,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]
# 화자 식별(ECAPA). Intel mac 로컬은 torch 2.2.2가 상한이라
# speechbrain==1.0.2 + huggingface_hub==0.25.2 조합 필요 (linux 서버는 최신 가능)
speaker = [
  "speechbrain>=1.0,<2.0",
  "torch>=2.2",
  "torchaudio>=2.2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
